# baker_intern

./: README.md
BakeRConfig/: BakeRConfig.changelog  BakeRConfig.package  mountdir.xml
BakeRConfig/doc/: MainPage.dox
BakeRConfig/etc/: 2440.xml  2491.xml  2713.xml  2716.xml  BakeR-3d.xml  BakeR-HG2.xml  BakeR-HG4.xml  BakeR-IgnoreIntervals-FrontLaser.xml  BakeR-IgnoreIntervals-RearLaser.xml  BakeR-Simulation.xml  BakeR-application-simulation.xml  BakeR-application.xml  BakeR-model.xml  BakeR.xml  SCITOSRobotAttributes-template.xml  start.sh  stop_ros.sh
BakeRConfig/etc/maps/AVH2/: map-clean.xml
BakeRConfig/etc/maps/Kenter/: map-clean.xml  map-nogo.xml  map-segmentation.xml  map-static.png.original  map-static.xml  map.mcf
baker_intern/: CMakeLists.txt  package.xml
external_software/scitos_common/scitos_msgs/: CMakeLists.txt  package.xml
external_software/scitos_common/scitos_msgs/action/: MoveBasePath.action
lips_camera/: CMakeLists.txt  package.xml
lips_camera/ros/include/lips_camera/: lips_camera.h
lips_camera/ros/launch/: lips_camera.launch  lips_camera_params.yaml
lips_camera/ros/src/: lips_camera.cpp  lips_camera_node.cpp
